Update published html files, committed by org-page.

--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <title>About - Ratheesh&#39;s Tech Ramblings!</title>
+    <title>About - org-page</title>
     <meta charset="utf-8" />
     <meta name="author" content="Ratheesh S" />
     <link rel="stylesheet" href="/media/css/main.css" type="text/css">
@@ -10,14 +10,14 @@
   <body class="container">
     <div>
       <header class="masthead">
-        <h1 class="masthead-title"><a href="/">Ratheesh&#39;s Tech Ramblings!</a></h1>
-        <p></p>
+        <h1 class="masthead-title"><a href="/">org-page</a></h1>
+        <p>static site generator</p>
         <ul>
           <li><a href="/blog/">Blog</a></li>
           <li><a href="/wiki/">Wiki</a></li>
           <li><a href="/tags/">Tags</a></li>
           <li><a href="/about/">About</a></li>
-          <li><a href="https://github.com/ratheesh">GitHub</a></li>
+          <li><a href="https://github.com/kelvinh/org-page">GitHub</a></li>
           <li><a href="/rss.xml">RSS</a></li>
         </ul>
         <form method="get" id="searchform" action="//www.google.com/search">
